--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "python.pythonPath": "/usr/local/bin/python3",
     "files.associations": {
         "ostream": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "iosfwd": "cpp",
+        "string": "cpp"
     }
 }
